# Test2025

./: Test2025.code-workspace  hello.cpp
Parts_realization/: CMakeLists.txt  Test_clint_matrix.cpp  Test_server.cpp  client_matrix.cpp  main_matrix.cpp  server_matrix.cpp  transfer_matrix.cpp
Parts_realization/head/: Matrix.h  Model.h
Parts_realization/part1/head/: Matrix.h  Model.h
Parts_realization/part1/src/: Matrix.cpp  Model.cpp
Parts_realization/part2/: double_matrix.cpp  float_matrix.cpp  main_matrix.cpp  part2.cpp
Parts_realization/src/: Matrix.cpp  Model.cpp
part1/head/: Matrix.h  Model.h
part1/src/: Matrix.cpp  Model.cpp
